--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/mathjs": "^6.0.11",
     "@types/node": "^16.11.12",
     "gulp": "^4.0.2",
-    "gulp-typescript": "^5.0.1",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "prettier": "^2.3.2",
     "sequelize-cli": "^6.2.0",
     "typescript": "^4.5.4"
